--- a/fantasy.html
+++ b/fantasy.html
@@ -60,7 +60,7 @@
       />
       <h2 class="h2">League Description</h2>
       <p>
-        I am the commissioner of an official <strong>NFL.com</strong> fantasy football league called
+        I am the commissioner of an official <strong>NFL.com</strong> fantasy football custom league called
         <strong>Blitzed and Confused</strong>.
       </p>
       <p>
