--- a/work.html
+++ b/work.html
@@ -236,12 +236,12 @@
       <h2 class="h2">Academic and Institutional Work</h2>
 
       <p>
-        As an AmeriCorps VISTA, I created and rolled out a project that was used in
-        an applied sociology course at the University of Tampa.
+        During my AmeriCorps VISTA service with the Homeless Coalition of Hillsborough County, I developed and led the Homeless PhotoVoice Project, a community-based applied sociology initiative. I designed the project and approached University of Tampa professor Norma Winston to integrate it into her Applied Sociology course.
+The project became a core part of the curriculum, engaging students in fieldwork, media coordination, and a public PhotoVoice showcase focused on homelessness in Tampa.
       </p>
 
       <p>
-        Featured in
+        The project was later documented as a case example in
         <a
           href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
           target="_blank"
