--- a/fantasy.html
+++ b/fantasy.html
@@ -17,7 +17,7 @@
     </header>
 
     <!-- Pages -->
-    <section class="panel" aria-label="Navigation">
+    <section class="panel">
       <h2 class="h2">Pages</h2>
       <ul class="links">
         <li><a href="./index.html">Home</a></li>
@@ -31,16 +31,10 @@
     </section>
 
     <!-- Search -->
-    <section class="panel" aria-label="Site search">
+    <section class="panel">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
-        <input
-          id="q"
-          name="q"
-          type="search"
-          autocomplete="off"
-          placeholder="Search the site..."
-        />
+        <input id="q" name="q" type="search" autocomplete="off" placeholder="Search the site..." />
         <button id="clear" type="button">Clear</button>
       </div>
 
@@ -52,11 +46,11 @@
     </section>
 
     <!-- Description -->
-    <section class="panel" aria-label="League description" style="position: relative;">
+    <section class="panel panel-has-logo">
       <img
         src="./assets/National_Football_League_logo.svg.png"
         alt="NFL logo"
-        style="position:absolute; top:16px; right:16px; width:36px; height:auto;"
+        class="panel-logo"
       />
       <h2 class="h2">League Description</h2>
       <p>
@@ -68,13 +62,12 @@
         results, and how to join.
       </p>
       <p>
-        <strong>There are several open spots available for the 2026-27 season.</strong> If you’re interested in joining,
-        review the information below and use the LeagueSafe link to enter.
+        <strong>There are several open spots available for the 2026–27 season.</strong>
       </p>
     </section>
 
     <!-- Snapshot -->
-    <section class="panel" aria-label="Snapshot">
+    <section class="panel">
       <h2 class="h2">Snapshot</h2>
       <ul class="links">
         <li>Hosting site: NFL.com</li>
@@ -87,7 +80,7 @@
     </section>
 
     <!-- Results -->
-    <section class="panel" aria-label="Last season results">
+    <section class="panel">
       <h2 class="h2">2025–26 Season Results</h2>
       <ul class="links">
         <li>🏆 <strong>No Malice</strong></li>
@@ -100,42 +93,33 @@
     </section>
 
     <!-- Rules -->
-    <section class="panel" aria-label="League rules">
+    <section class="panel">
       <h2 class="h2">League Rules</h2>
 
       <p><strong>Format</strong><br />
-        10 teams · Redraft · 4 keepers · Half-PPR · Snake draft (random order)
+        10 teams · Redraft · 4 keepers · Half-PPR · Snake draft
       </p>
 
       <p><strong>Playoffs</strong><br />
-        Top 6 · Weeks 15–17 · One-week matchups · Ties broken by bench points
+        Top 6 · Weeks 15–17 · One-week matchups
       </p>
 
       <p><strong>Roster</strong><br />
-        1 QB · 2 RB · 2 WR · 1 TE · 1 Flex (WR/RB/TE) · 1 K · 1 DEF<br />
+        1 QB · 2 RB · 2 WR · 1 TE · 1 Flex · 1 K · 1 DEF<br />
         Bench: 6 · IR: 3
       </p>
 
-      <p><strong>Waivers / Transactions</strong><br />
-        FAAB 100 · 1-day waivers · Players lock at game time<br />
-        Adds: 5/week, 35/season · Trades: 10/season
-      </p>
-
-      <p><strong>Trades</strong><br />
-        Commissioner review · Deadline: Nov 21 · Pick trades allowed · Collusion = removal
-      </p>
-
-      <p><strong>Keepers</strong><br />
-        Up to 4 keepers · Lock at draft date
+      <p><strong>Transactions</strong><br />
+        FAAB 100 · Adds: 5/week · Trades: 10/season
       </p>
 
       <p><strong>Conduct</strong><br />
-        Competitive lineups required · No collusion/tanking/abandonment · Trash talk allowed
+        Competitive lineups required · No collusion · Trash talk allowed
       </p>
     </section>
 
     <!-- Payouts -->
-    <section class="panel" aria-label="Payouts">
+    <section class="panel">
       <h2 class="h2">Payouts</h2>
       <ul class="links">
         <li>1st — 60%</li>
@@ -145,11 +129,11 @@
     </section>
 
     <!-- LeagueSafe -->
-    <section class="panel" style="position: relative;">
+    <section class="panel panel-has-logo">
       <img
         src="./assets/icon_full_orange.svg"
         alt="LeagueSafe logo"
-        style="position:absolute; top:16px; right:16px; width:40px;"
+        class="panel-logo"
       />
       <h2 class="h2">LeagueSafe Entry Fee</h2>
       <p>All league funds are securely collected and distributed through <strong>LeagueSafe</strong>.</p>
@@ -161,7 +145,7 @@
         rel="noopener noreferrer"
         class="button"
       >
-        Pay/Collect →
+        Pay Your Dues
       </a>
     </section>
 
