--- a/fantasy.html
+++ b/fantasy.html
@@ -145,7 +145,7 @@
         rel="noopener noreferrer"
         class="button"
       >
-        Pay Your Dues
+        Pay/Collect
       </a>
     </section>
 
