--- a/fantasy.html
+++ b/fantasy.html
@@ -135,7 +135,7 @@
         alt="LeagueSafe logo"
         class="panel-logo"
       />
-      <h2 class="h2">LeagueSafe Entry Fee</h2>
+      <h2 class="h2">Entry Fee</h2>
       <p>All league funds are securely collected and distributed through <strong>LeagueSafe</strong>.</p>
       <p>Entry fee: <strong>$25 + processing fee</strong></p>
 
