--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           target="_blank"
           rel="noopener"
         >
-          Pay Invoice →
+          Pay Invoice ↗
         </a>
       </p>
     </section>
