--- a/fantasy.html
+++ b/fantasy.html
@@ -85,7 +85,7 @@
       <ul class="links">
         <li>🏆 <strong>No Malice</strong></li>
         <li>🥈 Penei for your thoughts</li>
-        <li>🥉 A Bawdy Doodle</li>
+        <li>🥉 A Bawdy Doodle (me)</li>
         <li>4th — Jerry Circus</li>
         <li>5th — Vegas Eaddy</li>
         <li>6th — Delulu Bears Fan</li>
