--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <h2 class="h2">Pages</h2>
       <ul class="links">
         <li><a href="./books.html">Books</a></li>
-        <li><a href="./work.html">Work</a></li>
+        <li><a href="./contact.html">Contact</a></li>
         <li><a href="./music.html">Music</a></li>
         <li><a href="./livestream.html">Livestream</a></li>
         <li><a href="./research.html">Projects & Research</a></li>
         <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./work.html">Work</a></li>
       </ul>
     </section>
 
@@ -55,7 +55,7 @@
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, music, and research. Check in periodically for updates.
+        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, research, and more. Check in periodically for updates.
       </p>
     </section>
 
