--- a/books.html
+++ b/books.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <style>
+    /* ONLY CHANGE: round the outer book box more */
     .bookGroup {
-      border-radius: 16px;
+      border-radius: 24px;
       overflow: hidden;
       padding: 0;
     }
+
     .bookGroupHead {
       padding: 16px 16px 12px;
       border-bottom: 1px solid rgba(255,255,255,.08);
@@ -107,20 +109,12 @@
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
-        <input
-          id="q"
-          name="q"
-          type="search"
-          autocomplete="off"
-          placeholder="Search the site..."
-        />
+        <input id="q" name="q" type="search" autocomplete="off" placeholder="Search the site..." />
         <button id="clear" type="button">Clear</button>
       </div>
-
       <div class="resultsMeta">
         <strong><span id="count">0</span></strong> result(s)
       </div>
-
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
@@ -146,7 +140,6 @@
 
       <div class="bookStack">
 
-        <!-- Title + cover -->
         <div class="bookCard">
           <div class="bookTopRow">
             <div>
@@ -155,28 +148,16 @@
             </div>
 
             <div class="coverPh comingSoon" aria-label="Book cover coming soon">
-              <svg viewBox="0 0 300 450" role="img" aria-label="Placeholder cover">
+              <svg viewBox="0 0 300 450" role="img">
                 <defs>
                   <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
                     <stop offset="0" stop-color="rgba(255,255,255,.08)"/>
                     <stop offset="1" stop-color="rgba(255,255,255,.02)"/>
                   </linearGradient>
                 </defs>
-
-                <rect
-                  x="10"
-                  y="10"
-                  width="280"
-                  height="430"
-                  rx="14"
-                  fill="url(#g)"
-                  stroke="rgba(255,255,255,.12)"
-                />
-
-                <text
-                  x="150"
-                  y="225"
-                  text-anchor="middle"
+                <rect x="10" y="10" width="280" height="430" rx="14"
+                  fill="url(#g)" stroke="rgba(255,255,255,.12)" />
+                <text x="150" y="225" text-anchor="middle"
                   fill="rgba(255,255,255,.55)"
                   font-size="18"
                   letter-spacing=".14em"
@@ -188,68 +169,39 @@
           </div>
         </div>
 
-        <!-- Back cover -->
         <div class="bookCard tight">
           <h3 class="h3">Back Cover</h3>
-          <p>
-            Values-driven institutions often look humane on the surface: careful language,
-            collaborative norms, and a shared sense of mission. But when roles, authority,
-            and decision-making stay unfinished, responsibility doesn’t disappear.
-          </p>
-          <p>
-            It relocates into ambiguity, informal expectations, and the people most willing
-            to carry the load. Over time, “being reliable” becomes a job requirement. Exhaustion
-            becomes normal. And the system keeps functioning precisely because someone keeps compensating.
-          </p>
-          <p>
-            <strong>When Good Intentions Fail</strong> names the pattern clearly—without drama—and gives readers
-            a way to recognize where the burden went, why it landed there, and how to stop mistaking personal
-            strain for personal failure.
-          </p>
+          <p>Values-driven institutions often look humane on the surface...</p>
+          <p>It relocates into ambiguity, informal expectations...</p>
+          <p><strong>When Good Intentions Fail</strong> names the pattern clearly—without drama.</p>
         </div>
 
-        <!-- Excerpt -->
         <div class="bookCard tight">
           <h3 class="h3">Excerpt</h3>
-          <p>
-            Most institutions begin with language—mission statements, values decks, guiding principles.
-            Early on, those words attract people who care and create a sense of shared purpose.
-          </p>
-          <p>
-            But eventually, values have to become structure: roles, authority, process, and protection.
-            When that translation never fully happens, values start doing work they were never designed to do.
-          </p>
-          <p>
-            <em>“Values can guide decisions. They cannot carry them.”</em>
-          </p>
+          <p>Most institutions begin with language—mission statements...</p>
+          <p>But eventually, values have to become structure...</p>
+          <p><em>“Values can guide decisions. They cannot carry them.”</em></p>
         </div>
 
-        <!-- Testimonials -->
         <div class="bookCard tight">
           <h3 class="h3">Early Reader Feedback</h3>
-
           <p class="testimonial">
             “Bravo! Excellent read—extremely relatable, without being emotionally heavy.”
             <span>— Harmony</span>
           </p>
-
           <p class="testimonial">
-            “You are a very good writer. I’m impressed by how effective your sentences are—enough words to
-            make an interesting point, but not overly flowery.”
+            “You are a very good writer. I’m impressed by how effective your sentences are—enough words to make an interesting point, but not overly flowery.”
             <span>— Griffith</span>
           </p>
         </div>
 
-        <!-- Release -->
         <div class="bookCard tight">
           <h3 class="h3">Release Notes</h3>
           <p>The book is currently unpublished.</p>
           <p>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
-              target="_blank"
-              rel="noopener noreferrer">
-              Get notified when it's released ↗
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
+               target="_blank" rel="noopener noreferrer">
+              Sign up for updates
             </a>
           </p>
         </div>
