--- a/books.html
+++ b/books.html
@@ -201,7 +201,7 @@
           <p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6dzvBJ4JIcK7pOP0wM3skn8f-k69Vi5kWyw5NfNr6HsIw5w/viewform?usp=publish-editor"
                target="_blank" rel="noopener noreferrer">
-              Sign up for updates
+              Get notified when it's released ↗
             </a>
           </p>
         </div>
