--- a/work.html
+++ b/work.html
@@ -186,9 +186,9 @@
       </p>
 
       <ul class="links">
-        <li>Founder’s Best Story Award — The African Film Festival (TAFF)</li>
-        <li>Audience Award for Best Documentary — The Black Film Summit</li>
-        <li>Nominee, Best Editing — Oregon Documentary Film Festival</li>
+        <li>🏆 Founder’s Best Story Award — The African Film Festival (TAFF)</li>
+        <li>🏆 Audience Award for Best Documentary — The Black Film Summit</li>
+        <li> Nominee, Best Editing — Oregon Documentary Film Festival</li>
       </ul>
     </section>
 
