--- a/work.html
+++ b/work.html
@@ -181,6 +181,7 @@
       </p>
 
       <p>
+        Roles: Coproducer, Cowriter, Editor
         Released: March 19, 2022<br />
         Directed by Erica Stevenson
       </p>
