--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     </section>
 
     <!-- Payment -->
-    <section class="panel panel-has-logo" aria-label="Payments">
+    <section class="panel" aria-label="Payments" style="position:relative;">
+      <h2 class="h2">Payment</h2>
+
       <img
         src="./assets/Stripe_Logo,_revised_2016.svg.png"
         alt="Stripe"
-        class="panel-logo panel-logo-tall"
+        style="position:absolute;top:16px;right:16px;height:20px;"
       />
-
-      <h2 class="h2">Payment</h2>
 
       <p>
         For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
@@ -84,14 +84,14 @@
     </section>
 
     <!-- Schedule -->
-    <section class="panel panel-has-logo" aria-label="Schedule">
+    <section class="panel" aria-label="Schedule" style="position:relative;">
+      <h2 class="h2">Schedule</h2>
+
       <img
         src="./assets/Calendly_logo.png"
         alt="Calendly"
-        class="panel-logo panel-logo-tall"
+        style="position:absolute;top:16px;right:16px;height:20px;"
       />
-
-      <h2 class="h2">Schedule</h2>
 
       <div
         class="calendly-inline-widget"
