--- a/contact.html
+++ b/contact.html
@@ -56,52 +56,30 @@
           <input type="date" name="date_of_event" required>
         </label>
 
-        <!-- Event Type (radio list) -->
-        <fieldset class="fieldSet">
-          <legend>Event Type *</legend>
+        <label>
+          Event Type *
+          <select id="eventTypeSelect" name="event_type" required>
+            <option value="" selected disabled>Select one…</option>
+            <option>Wedding &amp; Pre-Wedding</option>
+            <option>Interview</option>
+            <option>Event Videography</option>
+            <option>Product &amp; Commercial</option>
+            <option>Architectural &amp; Interior</option>
+            <option>Birthday &amp; Anniversary</option>
+            <option value="Other">Other</option>
+          </select>
+        </label>
 
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Wedding & Pre-Wedding" required>
-            <span>Wedding &amp; Pre-Wedding</span>
-          </label>
-
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Interview" required>
-            <span>Interview</span>
-          </label>
-
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Event Videography" required>
-            <span>Event Videography</span>
-          </label>
-
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Product & Commercial" required>
-            <span>Product &amp; Commercial</span>
-          </label>
-
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Architectural & Interior" required>
-            <span>Architectural &amp; Interior</span>
-          </label>
-
-          <label class="radioRow">
-            <input type="radio" name="event_type" value="Birthday & Anniversary" required>
-            <span>Birthday &amp; Anniversary</span>
-          </label>
-
-          <label class="radioRow otherRow">
-            <input id="etypeOtherRadio" type="radio" name="event_type" value="Other" required>
-            <span>Other:</span>
-            <input
-              id="etypeOtherText"
-              type="text"
-              name="event_type_other"
-              placeholder="Type here…"
-              autocomplete="off"
-            >
-          </label>
-        </fieldset>
+        <label id="eventTypeOtherWrap" style="display:none;">
+          Please specify *
+          <input
+            type="text"
+            id="eventTypeOther"
+            name="event_type_other"
+            placeholder="Type here…"
+            autocomplete="off"
+          >
+        </label>
 
         <label>
           Details *
@@ -141,8 +119,9 @@
       const statusEl = document.getElementById("formStatus");
       const btn = document.getElementById("submitBtn");
 
-      const otherRadio = document.getElementById("etypeOtherRadio");
-      const otherText = document.getElementById("etypeOtherText");
+      const eventTypeSelect = document.getElementById("eventTypeSelect");
+      const eventTypeOtherWrap = document.getElementById("eventTypeOtherWrap");
+      const eventTypeOther = document.getElementById("eventTypeOther");
 
       function setStatus(msg, kind) {
         statusEl.textContent = msg || "";
@@ -157,25 +136,23 @@
         });
       }
 
-      // If user types in "Other" text, auto-select Other radio
-      otherText.addEventListener("input", () => {
-        if (otherText.value.trim()) otherRadio.checked = true;
-      });
-
-      // If user selects a non-Other option, clear Other text
-      form.addEventListener("change", (e) => {
-        if (e.target && e.target.name === "event_type" && e.target !== otherRadio) {
-          otherText.value = "";
+      eventTypeSelect.addEventListener("change", () => {
+        if (eventTypeSelect.value === "Other") {
+          eventTypeOtherWrap.style.display = "block";
+          eventTypeOther.setAttribute("required", "required");
+        } else {
+          eventTypeOtherWrap.style.display = "none";
+          eventTypeOther.removeAttribute("required");
+          eventTypeOther.value = "";
         }
       });
 
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
 
-        // Required validation
+        // Required validation (non-radio)
         const requiredEls = form.querySelectorAll("[required]");
         for (const el of requiredEls) {
-          if (el.type === "radio") continue;
           if (!String(el.value || "").trim()) {
             setStatus("Please fill out all required fields (*).", "error");
             el.focus();
@@ -183,17 +160,10 @@
           }
         }
 
-        // Required radio group check
-        const picked = form.querySelector('input[name="event_type"]:checked');
-        if (!picked) {
-          setStatus("Please select an Event Type (*).", "error");
-          return;
-        }
-
-        // If Other selected, require the text box
-        if (picked === otherRadio && !otherText.value.trim()) {
-          setStatus("Please fill in the “Other” event type.", "error");
-          otherText.focus();
+        // If Event Type = Other, ensure text is provided
+        if (eventTypeSelect.value === "Other" && !eventTypeOther.value.trim()) {
+          setStatus("Please specify your event type.", "error");
+          eventTypeOther.focus();
           return;
         }
 
@@ -201,6 +171,8 @@
         const gotcha = form.querySelector('input[name="_gotcha"]');
         if (gotcha && gotcha.value.trim()) {
           form.reset();
+          eventTypeOtherWrap.style.display = "none";
+          eventTypeOther.removeAttribute("required");
           setStatus("✅ Submitted. I’ll follow up within 48 hours.", "success");
           return;
         }
@@ -211,9 +183,9 @@
         try {
           const data = new FormData(form);
 
-          // Optional: include a combined human-friendly field too
-          if (picked === otherRadio) {
-            data.set("event_type", "Other: " + otherText.value.trim());
+          // Combine Other into event_type for the email you receive
+          if (eventTypeSelect.value === "Other") {
+            data.set("event_type", "Other: " + eventTypeOther.value.trim());
           }
 
           const res = await fetch(form.action, {
@@ -224,6 +196,8 @@
 
           if (res.ok) {
             form.reset();
+            eventTypeOtherWrap.style.display = "none";
+            eventTypeOther.removeAttribute("required");
             setStatus("✅ Submitted. I’ll follow up within 48 hours.", "success");
           } else {
             let errMsg = "Something went wrong. Please try again.";
