--- a/books.html
+++ b/books.html
@@ -123,11 +123,11 @@
       <h2 class="h2">Pages</h2>
       <ul class="links">
         <li><a href="./index.html">Home</a></li>
+        <li><a href="./work.html">Work</a></li>
+        <li><a href="./research.html">Projects & Research</a></li>
+        <li><a href="./livestream.html">Livestream</a></li>
         <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./music.html">Music</a></li>
-        <li><a href="./live.html">Live</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./work.html">Work</a></li>        
+        <li><a href="./contact.html">Contact</a></li>        
       </ul>
     </section>
 
