--- a/work.html
+++ b/work.html
@@ -174,7 +174,7 @@
       <h2 class="h2">Documentary Work</h2>
 
       <p>
-        Join 89-year-old retired educator and 2022 Nobel Peace Prize Nominee,
+        Join 89-year-old retired educator and community activist,
         Dr. Opal Lee (oft referred to as the “Grandmother of Juneteenth”), as she
         begins a years-long campaign to make her vision of Juneteenth becoming a
         federally-recognized holiday a reality.
