--- a/work.html
+++ b/work.html
@@ -260,12 +260,14 @@ The project became a core part of the curriculum, engaging students in fieldwork
   </main>
 
   <script>
+    // UPDATED ONLY THIS LIST to match your requested Pages box
     const PAGES = [
       { title: "Home", url: "./index.html", keywords: "home", content: "Home page and overview." },
-      { title: "Work", url: "./work.html", keywords: "work media production documentary imdb", content: "Media production services, documentary work, film credits, institutional work." },
       { title: "Books", url: "./books.html", keywords: "books writing", content: "Books and upcoming releases." },
-      { title: "Fantasy", url: "./fantasy.html", keywords: "fantasy football", content: "Fantasy football info and rules." },
-      { title: "Documents", url: "./documents.html", keywords: "documents files", content: "Document links and resources." }
+      { title: "Projects & Research", url: "./projects.html", keywords: "projects research", content: "Projects and research." },
+      { title: "Livestream", url: "./livestream.html", keywords: "livestream", content: "Livestream and related content." },
+      { title: "Fantasy Football", url: "./fantasy.html", keywords: "fantasy football", content: "Fantasy football info and rules." },
+      { title: "Contact", url: "./contact.html", keywords: "contact email", content: "Contact and inquiry form." }
     ];
 
     const dir = document.getElementById("dir");
